# myRandNotes

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gabriel4k2/fluidsynthdemo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/gabriel4k2/myRandNotes/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: C32.mid
app/src/main/cpp/: CMakeLists.txt  Instrument.cpp  Instrument.h  Main.cpp  MyNotesEngine.cpp  MyNotesEngine.h  NoteDispatcher.cpp  NoteDispatcher.h  NoteEngine.cpp  NoteEngine.h  Utils.cpp  Utils.h  fluidsynthdemo.cpp
app/src/main/java/com/gabriel4k2/: ActivityViewModel.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/: FluidSynthDemoApplication.kt  MainActivity.kt  MainActivityViewModel.kt  NoteRangePickerActivity.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/data/: Instrument.kt  InstrumentRepository.kt  SettingsStorage.kt  SoundEngine.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/di/: ActivityModules.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/domain/: IInstrumentRepository.kt  InstrumentUseCase.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/domain/model/: Chord.kt  Instrument.kt  Note.kt  NoteGenerationConfig.kt  Octave.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/providers/: MoshiProvider.kt  ThemeProvider.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/ui/: CustomDropdownMenu.kt  NoteDisplayer.kt  NoteUtils.kt  PlaybackController.kt  SettingsSection.kt
app/src/main/java/com/gabriel4k2/fluidsynthdemo/utils/: NoteUtils.kt  UIUtils.kt
app/src/main/java/com/gabriel4k2/myRandNotes/: JNIInterface.kt  MainActivity.kt  MyRandNotesApplication.kt  SoundEngine.kt
app/src/main/java/com/gabriel4k2/myRandNotes/data/: InstrumentRepository.kt  SettingsStorage.kt
app/src/main/java/com/gabriel4k2/myRandNotes/di/: ActivityModules.kt
app/src/main/java/com/gabriel4k2/myRandNotes/domain/: IInstrumentRepository.kt  InstrumentUseCase.kt
app/src/main/java/com/gabriel4k2/myRandNotes/ui/: PlaybackController.kt
app/src/main/java/com/gabriel4k2/myRandNotes/utils/: NoteUtils.kt  UIUtils.kt
app/src/main/jniLibs/arm64-v8a/lib/: libcharset.la  libffi.la  libgettextlib.la  libgettextpo.la  libgettextsrc.la  libiconv.la  libintl.la  libtextstyle.la
app/src/main/jniLibs/arm64-v8a/lib/cmake/Opus/: OpusConfig.cmake
app/src/main/jniLibs/arm64-v8a/lib/cmake/SndFile/: SndFileConfig.cmake
app/src/main/jniLibs/arm64-v8a/lib/cmake/Vorbis/: VorbisTargets.cmake
app/src/main/jniLibs/arm64-v8a/lib/gettext/: cldr-plurals  hostname  urlget  user-email
app/src/main/jniLibs/arm64-v8a/lib/pkgconfig/: flac.pc  gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  libffi.pc  libinstpatch-1.0.pc  libpcre.pc  libpcreposix.pc  oboe-1.0.pc  ogg.pc  opus.pc  sndfile.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
app/src/main/jniLibs/armeabi-v7a/lib/: libcharset.la  libffi.la  libgettextlib.la  libgettextpo.la  libgettextsrc.la  libiconv.la  libintl.la  libtextstyle.la
app/src/main/jniLibs/armeabi-v7a/lib/gettext/: cldr-plurals  hostname  urlget  user-email
app/src/main/jniLibs/armeabi-v7a/lib/glib-2.0/include/: glibconfig.h
app/src/main/jniLibs/armeabi-v7a/lib/pkgconfig/: flac.pc  gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  libffi.pc  libinstpatch-1.0.pc  libpcre.pc  libpcreposix.pc  oboe-1.0.pc  ogg.pc  opus.pc  sndfile.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
app/src/main/jniLibs/x86_64/lib/: libcharset.la  libffi.la  libgettextlib.la  libgettextpo.la  libgettextsrc.la  libiconv.la  libintl.la  libtextstyle.la
app/src/main/jniLibs/x86_64/lib/cmake/Ogg/: OggTargets.cmake
app/src/main/jniLibs/x86_64/lib/cmake/Opus/: OpusTargets.cmake
app/src/main/jniLibs/x86_64/lib/cmake/SndFile/: SndFileTargets.cmake
app/src/main/jniLibs/x86_64/lib/cmake/Vorbis/: VorbisTargets.cmake
app/src/main/jniLibs/x86_64/lib/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/jniLibs/x86_64/lib/gettext/: cldr-plurals  hostname  urlget  user-email
app/src/main/jniLibs/x86_64/lib/glib-2.0/include/: glibconfig.h
app/src/main/jniLibs/x86_64/lib/pkgconfig/: flac.pc  fluidsynth.pc  gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  libffi.pc  libinstpatch-1.0.pc  libpcre.pc  libpcreposix.pc  oboe-1.0.pc  ogg.pc  opus.pc  sndfile.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
app/src/main/jniLibs/x86_64/share/FLAC/cmake/: targets.cmake
app/src/main/jniLibs/x86_64/share/doc/gettext/: gettext.1.html  gettext_1.html  gettext_10.html  gettext_11.html  gettext_12.html  gettext_13.html  gettext_14.html  gettext_15.html  gettext_16.html  gettext_17.html  gettext_18.html  gettext_19.html  gettext_2.html  gettext_20.html  gettext_21.html  gettext_22.html  gettext_23.html  gettext_24.html  gettext_25.html  gettext_26.html  gettext_27.html  gettext_28.html  gettext_29.html  gettext_3.html  gettext_30.html  gettext_4.html  gettext_5.html  gettext_6.html  gettext_7.html  gettext_8.html  gettext_9.html  gettext_abt.html  gettext_fot.html  gettext_toc.html  ngettext.1.html
app/src/main/jniLibs/x86_64/share/doc/libtextstyle/: libtextstyle_1.html  libtextstyle_2.html  libtextstyle_3.html  libtextstyle_4.html  libtextstyle_5.html  libtextstyle_6.html  libtextstyle_7.html  libtextstyle_abt.html  libtextstyle_toc.html
app/src/main/jniLibs/x86_64/share/info/: dir  gettext.info  libtextstyle.info
app/src/main/jniLibs/x86_64/share/man/man1/: gettext.1  ngettext.1
app/src/main/res/layout/: activity_note_range_picker.xml
app/src/main/res/raw/: instruments.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/gabriel4k2/fluidsynthdemo/: ExampleUnitTest.kt
app/src/test/java/com/gabriel4k2/myRandNotes/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
themes/ui/theme/: Color.kt
(+81 files in other folders)
